fix npc programs

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -2262,8 +2262,6 @@ span.sheet-d6 {
     .sheet-npc div.sheet-end div.sheet-spells div.sheet-settings {
       grid-column-gap: 0.2%;
       grid-template-columns: 7em 3em 1fr 5em 5em 5em 3em 5em 3em; }
-    .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice'] {
-      margin-left: 3%; }
     .sheet-npc div.sheet-end div.sheet-spells label[data-i18n-title='notes'] {
       grid-column: 1 / 10; }
     .sheet-npc div.sheet-end div.sheet-forms div.sheet-settings {
@@ -2324,17 +2322,34 @@ span.sheet-d6 {
         grid-row: 3; }
       .sheet-npc div.sheet-matrix-device div.repcontainer label[data-i18n-title='notes'] {
         grid-row: 4; }
-      .sheet-npc div.sheet-matrix-device div.repcontainer input.sheet-toggle {
-        top: 3%; }
       .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem {
         display: inline-block;
         width: 100%; }
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem button > span, .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem span {
+          opacity: 0.2; }
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input.sheet-toggle,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem span.sheet-pictos,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem .sheet-settings-toggle input[type='checkbox'] + span,
+        .sheet-settings-toggle .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[type='checkbox'] + span,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem .sheet-settings-flag input[type='checkbox'] + span,
+        .sheet-settings-flag .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[type='checkbox'] + span,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem .sheet-flag-primary + div > span,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem .repcontrol span.repcontrol_edit:after,
+        .repcontrol .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem span.repcontrol_edit:after,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem .repcontrol span.repcontrol_add:after,
+        .repcontrol .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem span.repcontrol_add:after,
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem .itemcontrol span.repcontrol_del,
+        .itemcontrol .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem span.repcontrol_del {
+          position: absolute;
+          top: 2%; }
         .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[name='attr_program_on'] {
           left: 2%; }
           .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[name='attr_program_on'] + span {
             left: 2.5%; }
-        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem button {
-          margin-left: 5%; }
+          .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[name='attr_program_on']:checked ~ button > span, .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem input[name='attr_program_on']:checked ~ span {
+            opacity: 1; }
+        .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem button[type="roll"] {
+          margin-left: 5% !important; }
 
 /**************************************************************************/
 /***************** PC & NPC SHEET SHOW & HIDE SETTINGS *******************/
