--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -429,7 +429,7 @@
 				span.pictos x
 				input.toggle(name='attr_program_on' type='checkbox' checked)
 				span.pictos Q
-				button(name='program' type='roll' value='@{gm_toggle} &{template:rolls}{{header=@{program}}}{{desc=@{program_note}}}')
+				button(name='roll_program' type='roll' value='@{gm_toggle} &{template:rolls}{{header=@{program}}}{{desc=@{program_note}}}')
 					span(name='attr_program')
 				span(name='attr_program_note')
 				.settings
