--- a/Shadowrun5thEdition/src/scss/_npc.scss
+++ b/Shadowrun5thEdition/src/scss/_npc.scss
@@ -294,7 +294,6 @@
 			}
 
 			span[name='attr_dice'] { 
-				margin-left: 3%;
 				@extend %parantheseNumbers; 
 			}
 
@@ -392,21 +391,30 @@
 			h2[data-i18n='notes'] { grid-row: 3; }
 			label[data-i18n-title='notes'] { grid-row: 4; }
 
-			input.sheet-toggle { 
-				top: 3%;
-			}
 
 			div.repitem {
 				display: inline-block;
 				width: 100%;
 
+				button > span, span { opacity: 0.2; }
+
+				input.sheet-toggle,
+				span.sheet-pictos { 
+					position: absolute;
+					top: 2%;
+				}
+
 				input[name='attr_program_on'] {
 					left: 2%;
 
 					&  + span { left: 2.5%;}
+
+					&:checked ~ button > span,
+					&:checked ~ span { opacity: 1; }
 				}
 
-				button { margin-left: 5%; }
+
+				button[type="roll"] { margin-left: 5% !important; }
 			}
 		}
 	}
