--- a/Shadowrun5thEdition/src/scss/_global.scss
+++ b/Shadowrun5thEdition/src/scss/_global.scss
@@ -25,6 +25,13 @@
 
 		&:before {display: none;}
 	    &:hover, &:focus, &:active { font-weight : bold; }
+
+	    & > span {
+	    	display: block;
+	    	overflow: hidden;
+	    	text-overflow: ellipsis;
+	    	width: 100%;
+	    }
 	}
 
 	div {background-color: transparent;}
