--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -82,6 +82,18 @@
 		}
 	}
 
+	/***** PC WEAPONS *****/
+	div.sheet-weapon-range,
+	div.sheet-weapon-melee {
+		@extend %display-none;
+	}
+
+	input.sheet-tab-switch[value='range'] ~ .sheet-weapon-range,
+	input.sheet-tab-switch[value='melee'] ~ .sheet-weapon-melee  {
+		@extend %display-inline-block; 
+	}
+
+
 	/***** NPC TYPES *****/
 	@each $npcType in $npcTypes {
 		.sheet-#{$npcType}  { @extend %display-none; }
