--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -60,7 +60,10 @@
 	.sheet-triangle {border-right: 30px solid $red;}
 	.sheet-right-tri {border-left: 30px solid $red;}
 
-	.sheet-right-header {float: left;}
+	.sheet-right-header {
+		margin-right: -8%;
+		float: left;
+	}
 
 /***** SECONDARY HEADERS LIKE ON SKILLS *****/
 	.sheet-htab {
@@ -168,19 +171,6 @@
 			display     : inline;
 			margin-right: -5%;
 		}
-	}
-
-	/***** PRIMARY ARMOR *****/
-	.sheet-armor-buttons {
-		display    : inline-block;
-		font-size  : 1.5em;
-		line-height: 20px;
-		margin-left: 1%;
-		width      : 35%;
-
-		button[type='roll'] { margin-right: -5px; }
-
-		span { font-size  : 1em; }
 	}
 
 	/***** PRIMARY WEAPON *****/
@@ -639,38 +629,13 @@
 		height  : 100%;
 	}
 
-	$displayFlags: 'quality-box', 'contacts', 'spell-box', 'social-box', 'vehicle-box';
+	$displayFlags: 'quality-box', 'contacts', 'social-box', 'vehicle-box';
 	@each $flag in $displayFlags {
 		.sheet-#{$flag} .sheet-display-flag { @extend %display-flag;}
 	}
 
 	div.sheet-augs div.sheet-repeat-box {
 		.sheet-display-flag { @extend %display-flag;}
-	}
-
-	%arms-display-flag {
-		height  : 12px;
-		position: absolute;
-		top     : 2px;
-		width   : 12px;
-		left: 93%;
-	}
-
-
-	div.sheet-arms {
-		input.sheet-display-flag,
-		input.sheet-display-flag + span {
-			@extend %arms-display-flag;
-		}
-
-		input.sheet-display-flag { 
-			top: 2px; 
-			opacity: 0;
-		}
-
-		input.sheet-display-flag:checked ~ div.sheet-collapse div.sheet-desc { 
-			display: block; 
-		}
 	}
 
 /***** DISPLAY ROWS *****/
@@ -744,103 +709,6 @@
 		opacity: 1;
 		width: 3%;
 	}
-
-/***** ARMS *****/
-	.sheet-arms {
-		.sheet-htab {
-			margin-right: -40px;
-			&:first-child {margin-left: -35px;}
-		}
-
-		.sheet-display  {
-			@extend %display-inline-block;
-			margin-left: -1%;
-
-			.sheet-display-row {
-				text-align: center;
-				width     : 8%;
-
-				&:first-child {
-					text-align  : left;
-					width       : 36%;
-				}
-
-				&:nth-of-type(2) {width: 12%;}
-			}
-		}
-
-		input[type='text'] {
-			text-align: center;
-			width     : 8%;
-
-			&:first-child {
-				text-align  : left;
-				width       : 36%;
-			}
-		}
-
-		h3 {
-			text-align: center;
-			width     : 8%;
-
-			&:first-child {
-				text-align: left;
-				margin-right: 2%;
-			}
-
-			&[data-i18n='weapon'] {width: 34%;}
-			&[data-i18n='armor'] { width: 38%;}
-		}
-	}
-
-/***** WEAPONS *****/
-	.sheet-pc .sheet-weapon-range,
-	.sheet-pc .sheet-weapon-melee {
-		display: none;
-		width  : 100%;}
-
-	.sheet-tab-switch[value='range'] ~ .sheet-weapon-range,
-	.sheet-tab-switch[value='melee'] ~ .sheet-weapon-melee  {
-		display: inline-block;
-	}
-
-/***** WEAPON SETTINGS *****/
-	.sheet-weapon-box select {width: 10%;}
-	.sheet-weapon-box .sheet-settings-row {margin-top: 5px;}
-
-	.sheet-weapon-range h3 {
-		margin-right: 3px;}
-
-	.sheet-weapon-melee {
-		h3 {
-			margin-right: 10px;
-
-			&:first-child { width: 40%; }
-		}
-
-		input[type='text']:first-child { width: 40%; }
-
-		input,			
-		.sheet-display-row {
-			margin-right: 5px;
-		}
-	}
-
-	.sheet-weapon-range h3:nth-child(2),
-	.sheet-weapon-range h3:nth-child(5) {
-		width: 11%;}
-
-	.sheet-weapon-box label + input[type='text'] {width: 27%;}
-
-	.sheet-exotic-warning {
-		display  : none;
-		font-size: 0.8em;
-
-		.sheet-skill-select[value='0'] ~ & {
-			display: inline;
-		}
-	}
-
 
 /***** ARMOR *****/
 	.sheet-armor-box {
@@ -1384,29 +1252,6 @@
       .sheet-repeat-row span {font-size: 0.8em;}
 
     .sheet-repeat-dice {font-size: 12px;}
-
-  /*:+:+:+: NPC WEAPONS :+:+:+:*/
-    .sheet-repeat-row.sheet-weapon-range,
-    .sheet-repeat-row.sheet-weapon-melee  {
-      display: none;}
-
-      input.sheet-range-toggle,
-      input.sheet-melee-toggle {
-        left       : 28px;
-        margin-left: -32px;
-        position   : relative;}
-
-      input.sheet-melee-toggle:checked ~ div.sheet-weapon-melee,
-      input.sheet-range-toggle:checked ~ div.sheet-weapon-range {
-        display: inherit;} 
-
-      input.sheet-melee-toggle + span {margin-right: 0px !important;}
-
-    .sheet-weapon-note {
-      display   : inherit;
-      margin-top: 3px;
-      width     : 100%;}
-
 
   /*:+:+:+: NPC SPELLS :+:+:+:*/
     input.sheet-spell-toggle {margin: 0px -38px 0px 5px;}
