--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -31,7 +31,7 @@ include src/pug/_variables.pug
 			label.switch(data-i18n-title=key title=key)
 				input.whisper-toggle(name='attr_'+key+'_toggle' type='checkbox' value=val)
 				span.slider
-		button(name='d6' title='Roll D6s' type='roll' value='@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5)]]}}') L
+		button(name='d6' title='Roll D6s' type='roll' value!='@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5)]]}}') L
 		input(name='attr_tab' type='hidden' value='core')
 		button.pictos(name='act_tab_options' title='@{tab}' type='action' ) y
 		each val in ['core', 'arms', 'augs', 'gear', 'magic', 'matrix', 'social', 'vehicle']
@@ -119,7 +119,163 @@ include src/pug/_variables.pug
 	include src/core.html
 
 	//- ARMS TAB
-	include src/arms.html
+	.arms.pc-col
+		.pc-row.weapons
+			.header.right-header
+				h1(data-i18n='weapons') Weapons
+				.right-tri
+			.header.right-header
+				.header.htab
+					.triangle
+					input.tab-switch(name='attr_weapon_type_toggle' type='radio' value='range' checked)
+					h1(data-i18n='ranged') Ranged
+					.right-tri
+				.header.htab
+					.triangle
+					input.tab-switch(name='attr_weapon_type_toggle' type='radio' value='melee')
+					h1(data-i18n='melee') Melee
+					.right-tri
+			.border-box
+				.pc-box.medium-box
+					input.tab-switch(name='attr_weapon_type_toggle' type='hidden' value='range')
+					.rows.repeating-container.weapon-range
+						- const rangeRepeatingSection = '@{repeating_range_${x}';
+						+h2Headers(pcRangeWeaponObject)
+						fieldset(class='repeating_range')
+							input(name='attr_dicepool' type='hidden' value='0')
+							input.flag-primary(name='attr_primary' type='hidden' value='')
+							+weaponRollButton(pcRangeWeaponButton)
+							each val in ['Dam', 'Acc', 'AP', 'Mode', 'RC', 'Ammo']
+								- const attrName = val === 'Dam' ? 'damage' : val === 'RC' ? 'recoil' : val.toLowerCase();
+								if val === 'Mode'
+									select(name='attr_mode' title='@{mode}' value='BF')
+										each val in weaponModes
+											option(data-i18n=val.toLowerCase() value=val) #{val}
+								else
+									span.center(name=`attr_${attrName}`)
+							+repeatingSectionFlags()
+							.settings
+								each val, key in pcRangeWeaponObject
+									- const attrName = key === 'Dam' ? 'damage' : key.toLowerCase();
+									if key === 'Mode'
+										select(name='attr_mode' title='@{mode}' value='BF')
+											each val in weaponModes
+												option(data-i18n=val.toLowerCase() value=val) #{val}
+									else
+										label(data-i18n-title=key.toLowerCase() title=key.toLowerCase())
+											input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${rangeRepeatingSection}_${attrName}}` type=val['type'] value='')
+								.row
+									h3(data-i18n="modeoptions") Mode Options
+									label(data-i18n-title="modeoptions" title="Mode Options")
+										input(name="attr_mode_options" placeholder="SA/BF/FA" type="text" title=`${rangeRepeatingSection}_mode_options}}`)
+									h3(data-i18n="range") range
+									label(data-i18n-title="range" title="Range")
+										input(name="attr_range" placeholder="25/150/350/550" type="text" title='')
+									h3(data-i18n="primary") primary
+									label(data-i18n-title="primary" title="Primary")
+										input(name="attr_primary" type="checkbox" title=`${rangeRepeatingSection}_primary}`  value='primary')
+
+								.row
+									h3(data-i18n='skill') skill
+									select(name=`attr_skill` title=`${rangeRepeatingSection}_skill}` value='@{firearms}')
+										optgroup(label='Combat Skills' ) Combat Skills
+											option(data-i18n='firearms' value='@{firearms}' selected) Firearms Group
+											option(data-i18n='automatics' value='@{automatics}') Automatics
+											option(data-i18n='archery' value='@{archery}') Archery
+											option(data-i18n='exoticrange' value='0') Exotic Range
+											option(data-i18n='heavyweapons' value='@{heavyweapons}') Heavy Weapons
+											option(data-i18n='longarms' value='@{longarms}') Longarms
+											option(data-i18n='pistols' value='@{pistols}') Pistols
+											option(data-i18n='throwingweapons' value='@{throwingweapons}') Throwing Weapons
+										optgroup(label='Vehicle Skills') Vehicle Skills
+											option(data-i18n='gunnery' value='@{gunnery}') Gunnery
+									h3(data-i18n='specialization') specialization
+									label(data-i18n-title='specialization' title='specialization')
+										input(name='attr_spec' value='2' title=`${rangeRepeatingSection}_spec}` type='checkbox')
+									h3(data-i18n='modifier') modifier
+									label(data-i18n-title='modifier' title='modifier')
+										input(name='attr_dicepool_modifier' title=`${rangeRepeatingSection}_dicepool_modifier}` type='number')
+									input(name=`attr_skill` type='hidden' value='')
+									.exotic-warning
+										i(data-i18n="exoticnote") Exotic weapons are not linked to a skill. Use Modifier input to set dicepool.
+								+repeatingSectionNotes('range')
+					.rows.repeating-container.weapon-melee
+						- const meleeRepeatingSection = '@{repeating_melee_${x}';
+						+h2Headers(pcMeleeWeaponObject)
+						fieldset(class='repeating_melee')
+							input(name='attr_dicepool' type='hidden' value='0')
+							input.flag-primary(name='attr_primary' type='hidden' value='')
+							+weaponRollButton(pcMeleeWeaponButton)
+							each val in ['Dam', 'Acc', 'AP', 'Reach']
+								- const attrName = val === 'Dam' ? 'damage' : val.toLowerCase();
+								span.center(name=`attr_${attrName}`)
+							+repeatingSectionFlags()
+							.settings
+								each val, key in pcMeleeWeaponObject
+									- const attrName = key === 'Dam' ? 'damage' : key.toLowerCase();
+									label(data-i18n-title=key.toLowerCase() title=key.toLowerCase())
+											input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${meleeRepeatingSection}_${attrName}}` type=val['type'] value='')
+								h3(data-i18n="primary") primary
+								label(data-i18n-title="primary" title="Primary")
+									input(name="attr_primary" type="checkbox" title=`${meleeRepeatingSection}_primary}`  value='primary')
+								.row
+									h3(data-i18n='skill') skill
+									select(name=`attr_skill` title=`${meleeRepeatingSection}_skill}` value='@{closecombat}')
+										optgroup(label='Combat Skills' ) Combat Skills
+											option(data-i18n='closecombat' value='@{closecombat}' selected) Close Combat Group
+											option(data-i18n='blades' value='@{blades}') Blades
+											option(data-i18n='clubs' value='@{clubs}') Clubs
+											option(data-i18n='exoticmelee' value='0') Blades
+											option(data-i18n='unarmedcombat' value='@{unarmedcombat}') Unarmed Combat
+										optgroup(label='Vehicle Skills') Vehicle Skills
+											option(data-i18n='gunnery' value='@{gunnery}') Gunnery
+									h3(data-i18n='specialization') specialization
+									label(data-i18n-title='specialization' title='specialization')
+										input(name='attr_spec' value='2' title=`${meleeRepeatingSection}_spec}` type='checkbox')
+									h3(data-i18n='modifier') modifier
+									label(data-i18n-title='modifier' title='modifier')
+										input(name='attr_dicepool_modifier' title=`${meleeRepeatingSection}_dicepool_modifier}` type='number')
+									input(name=`attr_skill` type='hidden' value='')
+									.exotic-warning
+										i(data-i18n="exoticnote") Exotic weapons are not linked to a skill. Use Modifier input to set dicepool.
+								+repeatingSectionNotes('melee')
+		.pc-row.armor
+			.header.right-header
+				h1(data-i18n='armor') Armor
+				.right-tri
+			.border-box
+				.pc-box.medium-box
+					.rows.repeating-container
+						- const armorRepeatingSection = '@{repeating_armor_${x}';
+						.row-long.headers
+							each val in ['Armor', 'Rating', 'Acid', 'Cold', 'Elec', 'Fire', 'Radi']
+								h2(data-i18n=`${val.toLowerCase()}`) #{val}
+						fieldset(class='repeating_armor')
+							input.flag-primary(name='attr_primary' type='hidden' value='')
+							button(name=`roll_soak` type='roll' value!=noWoundsRollBegining+'{{header=^{soak}}}{{base=^{body} ♦ ^{armor}}}{{dice=[[((@{body}+@{rating}+@{dicepool_modifier})'+noWoundsRollEnding)
+								span(name='attr_name')
+							button(name=`roll_armor` type='roll' value!=noWoundsRollBegining+'{{header=@{name}}}{{base= ^{armor}}}{{dice=[[((@{rating})'+noWoundsRollEnding)
+								span.center(name='attr_rating')
+							each val in ['Acid', 'Cold', 'Electrical', 'Fire', 'Radiation']
+								- const attrName = val.toLowerCase();
+								button(name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=^{${attrName}protection}}}{{base= ^{armor}}}{{dice=[[((@{body}+@{rating}+@{dicepool_modifier}+@{${attrName}_modifier})`+noWoundsRollEnding)
+									span.center(name=`attr_${attrName}_modifier`)
+							+repeatingSectionFlags()
+							.settings
+								each val, key in pcArmorObject
+									- const attrName = key === 'Name' || key === 'Rating' ? key.toLowerCase() : `${key.toLowerCase()}_modifier`;
+									label(data-i18n-title=key.toLowerCase() title=key.toLowerCase())
+										input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`@{repeating_armor_`+'${x}'+`_${attrName}}` type=val['type'] value='')
+								.row
+									h3(data-i18n="primary") primary
+									label(data-i18n-title="primary" title="Primary")
+										input(name="attr_primary" type="checkbox" title=`${armorRepeatingSection}_primary}`  value='primary')
+									h3(data-i18n="modifier") modifier
+									label(data-i18n-title='modifier' title='modifier')
+										input(name='attr_dicepool_modifier' placeholder='0' title=`${armorRepeatingSection}_dicepool_modifier}` type='number' value='0')
+								+repeatingSectionNotes('armor')
+
+
 
 	//- AUGS TAB
 	.augs.pc-col
@@ -140,11 +296,11 @@ include src/pug/_variables.pug
 							+repeatingSectionFlags()
 							.settings
 								each val in augementations
-									- const attrName = val === 'Augmentations' ? "augementation" : val.toLowerCase();
+									- const attrName = val === 'Augmentations' ? 'augementation' : val.toLowerCase();
 									- const type = val === 'Augmentations' ? 'text' : 'number';
 									- const placeholder = val === 'Augmentations' ? 'name' : '0';
 									label(data-i18n-title=val title=val)
-										input(name=`attr_${attrName}` placeholder=placeholder title=`@{repeating_augementations_`+'${x}'+`_${attrName}}` type=type value="")
+										input(name=`attr_${attrName}` placeholder=placeholder title=`@{repeating_augementations_`+'${x}'+`_${attrName}}` type=type value='')
 								+repeatingSectionNotes('augementations')
 
 	//- GEAR TAB
@@ -166,11 +322,11 @@ include src/pug/_variables.pug
 							+repeatingSectionFlags()
 							.settings
 								label(data-i18n-title='item' title='item')
-									input(name=`attr_item` placeholder=name title=`@{repeating_items_`+'${x}'+`_item}` type='text' value="")
+									input(name=`attr_item` placeholder='Jammer' title=`@{repeating_items_`+'${x}'+`_item}` type='text' value='')
 								label(data-i18n-title='rating' title='rating')
-									input(name=`attr_rating` placeholder=name title=`@{repeating_items_`+'${x}'+`_rating}` type='text' value="")
+									input(name=`attr_rating` placeholder='3' title=`@{repeating_items_`+'${x}'+`_rating}` type='text' value='')
 								label(data-i18n-title='quantity' title='quantity')
-									input(name=`attr_quantity` placeholder=name title=`@{repeating_items_`+'${x}'+`_quantity}` type='text' value="")
+									input(name=`attr_quantity` placeholder='x3' title=`@{repeating_items_`+'${x}'+`_quantity}` type='text' value='')
 								+repeatingSectionNotes('items')
 
 
@@ -240,24 +396,24 @@ include src/pug/_variables.pug
 							fieldset(class=`repeating_ritual`)
 								- const repeatingRitualSection = `@{repeating_${type}`+'_${x}';
 								input(name='attr_dicepool' type='hidden' value='0')
-								+displayRollButton(pcSpellButton, true)
+								+displayRollButton(pcRitualButton, true)
 								each val in ['type', 'range', 'duration', 'drain']
 									span.center(name='attr_'+val)
 								+repeatingSectionFlags()
 								.settings
 									label(data-i18n-title='name' title='name')
-										input(name="attr_name" placeholder="Curse (MATERIAL LINK, SPELL)" title=`@{${repeatingRitualSection}_name}` type="text")
+										input(name='attr_name' placeholder='Curse (MATERIAL LINK, SPELL)' title=`@{${repeatingRitualSection}_name}` type='text')
 									.rows
-										h3(data-i18n="skill") skill
+										h3(data-i18n='skill') skill
 										select(name='attr_skill' title=`@{${repeatingRitualSection}_skill}`)
-											option(data-i18n="sorcerygroup" value="@{sorcery}") Sorcery Group
-											option(data-i18n="ritualspellcasting" value="@{ritualspell}" selected) Sorcery Group
-										h3(data-i18n="specialization") specialization
-										label(data-i18n-title="specialization" title="specialization")
-											input(name="attr_spec" title=`@{${repeatingRitualSection}_spec}` type="checkbox" value="2")
-										h3(data-i18n="modifier") modifier
-										label(data-i18n-title="modifier" title="modifier")
-											input(name="attr_dicepool_modifier" title=`@{${repeatingRitualSection}_dicepool_modifier}` type="number")
+											option(data-i18n='sorcerygroup' value='@{sorcery}') Sorcery Group
+											option(data-i18n='ritualspellcasting' value='@{ritualspellcasting}' selected) Ritual Spellcasting
+										h3(data-i18n='specialization') specialization
+										label(data-i18n-title='specialization' title='specialization')
+											input(name='attr_spec' title=`@{${repeatingRitualSection}_spec}` type='checkbox' value='2')
+										h3(data-i18n='modifier') modifier
+										label(data-i18n-title='modifier' title='modifier')
+											input(name='attr_dicepool_modifier' title=`@{${repeatingRitualSection}_dicepool_modifier}` type='number')
 									+repeatingSectionNotes('ritual')
 
 		.pc-row.powers
@@ -277,10 +433,9 @@ include src/pug/_variables.pug
 							+repeatingSectionFlags()
 							.settings
 								label(data-i18n-title='name' title='name')
-									input(name="attr_name" placeholder="name" title="@{repeating_powers_${x}_name}" type="text" value="")
+									input(name='attr_name' placeholder='name' title='@{repeating_powers_${x}_name}' type='text' value='')
 								label(data-i18n-title='rating' title='rating')
-									input(name="attr_rating" placeholder="rating" title="@{repeating_powers_${x}_rating}" type="number" value="")
-								h3(data-i18n='notes') notes
+									input(name='attr_rating' placeholder='rating' title='@{repeating_powers_${x}_rating}' type='number' value='')
 								+repeatingSectionNotes('powers')
 
 	//- MATRIX TAB
@@ -300,7 +455,7 @@ include src/pug/_variables.pug
 							+repeatingSectionFlags()
 							.settings
 								label(data-i18n-title='programs' title='programs')
-									input(name="attr_program" placeholder="Program name" title="@{repeating_programs_${x}_program}" type="text" value="")
+									input(name='attr_program' placeholder='Program name' title='@{repeating_programs_${x}_program}' type='text' value='')
 								+repeatingSectionNotes('programs')
 		.pc-row
 			.header.right-header
@@ -322,7 +477,7 @@ include src/pug/_variables.pug
 							+repeatingSectionFlags()
 							.settings
 								label(data-i18n-title='name' title='name')
-									input(name="attr_name" placeholder="name" title=`${formsrepeatingSection}_name}` type="text" value="")
+									input(name='attr_name' placeholder='name' title=`${formsrepeatingSection}_name}` type='text' value='')
 								select(name=`attr_target` title=`${formsrepeatingSection}_target}` value='Device')
 									each val in formTargets
 										- const i18n = val.toLowerCase();
@@ -332,18 +487,18 @@ include src/pug/_variables.pug
 										- const i18n = val.toLowerCase();
 										option(data-i18n=i18n value=val) #{val}
 								label(data-i18n-title='fade' title='fade')
-									input(name="attr_fade"  placeholder="-1" title=`${formsrepeatingSection}_fade}` type="number" value="")
+									input(name='attr_fade'  placeholder='-1' title=`${formsrepeatingSection}_fade}` type='number' value='')
 								.row
-									h3(data-i18n="skill") skill
+									h3(data-i18n='skill') skill
 									select(name=`attr_skill` title=`${formsrepeatingSection}_skill}` value='@{software}')
-										option(data-i18n="electronicsgroup" value="@{electronics}") Electronics Group
-										option(data-i18n="software" value="@{software}" selected) Software
-									h3(data-i18n="specialization") specialization
+										option(data-i18n='electronicsgroup' value='@{electronics}') Electronics Group
+										option(data-i18n='software' value='@{software}' selected) Software
+									h3(data-i18n='specialization') specialization
 									label(data-i18n-title='specialization' title='specialization')
-										input(name="attr_spec" value="2" title=`${formsrepeatingSection}_spec}` type="checkbox")
-									h3(data-i18n="modifier") modifier
-									label(data-i18n-title="modifier" title="modifier")
-										input(name="attr_dicepool_modifier" title=`${formsrepeatingSection}_dicepool_modifier}` type="number")
+										input(name='attr_spec' value='2' title=`${formsrepeatingSection}_spec}` type='checkbox')
+									h3(data-i18n='modifier') modifier
+									label(data-i18n-title='modifier' title='modifier')
+										input(name='attr_dicepool_modifier' title=`${formsrepeatingSection}_dicepool_modifier}` type='number')
 								+repeatingSectionNotes('forms')
 
 	//- SOCIAL TAB
