--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -29,7 +29,7 @@
 /* MIXIN
 	============================= */
 @mixin repeatingInformation($endColumn, $longCollapseFlag) {
-	label[data-i18n-title="notes"], 
+	label[data-i18n-title='notes'], 
 	h3[data-i18n='notes'], 
 	div.sheet-collapse { 
 		grid-column: 1 / #{$endColumn};
@@ -186,13 +186,13 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		box-shadow      : inset 0px 0px 3px 1px #7c7c7c;
 		margin-left     : -1%;
 		padding-left    : 0.5%;
-		
+
 		button > h2:hover,
 		button > span:hover,
 		label > button[type='roll']:hover,
 		.sheet-repeat-box button[type='roll']:hover,
 		.sheet-con-track button[type='action']:hover,
-		button[data-i18n="default"]:hover {
+		button[data-i18n='default']:hover {
 			color      : #fff;
 			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
 		}
@@ -224,6 +224,10 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		}
 
 		hr { margin: 7px 0px -2px 0px; }
+
+		input {
+			border-radius: 0px;
+		}
 
 		.sheet-tabs {
 			@extend %display-inline-grid;
@@ -332,19 +336,45 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			}
 		}
 
+		.sheet-pc-row {
+			button[type='roll'] { color:$blacker }
+		}
+
 		/***** REPEATING CONTAINERS *****/
 		div.sheet-repeating-container {
 			div.repitem {
 				display: inline-grid;
 				padding: 1% 0.5%;
+				margin-bottom: 0px;
 				@extend %gridGap;
-
-				input[type="text"] { width: 100%; }
-
 				@extend %borderBottom;
 
-				button[type='roll'],
-				input[name='attr_name'] { text-align: left; }
+				button[type='roll'] { 
+					text-align: left; 
+				}
+
+				input { 
+					&:nth-of-type(1n+2) { text-align: center; } 
+
+					&[type='text'],
+					&[type='number'] { 
+						@extend %borderBottom;
+						width: 100%; 
+					}
+				}
+
+				label { 
+					padding-right: 0px;
+
+					input[name='attr_name'],
+					input[name='attr_weapon'] { 
+						text-align: left; 
+					}
+
+					&[data-i18n-title='modifier'] {
+						width: 3em;
+					}
+				}
 
 				div.sheet-settings { 
 					background-color: $ccc;
@@ -366,14 +396,30 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			input[type='number'] { text-align: center; }
 		}
 
+		/***** ARMOR BUTTONS *****/
+		div.sheet-core {
+			div.sheet-armor-buttons {
+				display    : inline-block;
+				font-size  : 1.5em;
+				line-height: 20px;
+				margin-left: 1%;
+				width      : 35%;
+
+				button {
+					&[type='roll'] { margin-right: -5px; }
+					&[name='roll_defense'] { 
+						background-color: $gray;
+						color: $white;
+					}
+				}
+
+				span { font-size  : 1em; }
+			}
+		}
+
 		/***** SKILLS *****/
 		div.sheet-skill-box {
 			$skillGrid: 1fr 3.5em 5em 5em 1em 1em;
-
-			button[type='roll'] {
-				font-size: 1em;
-				text-align: left;
-			}
 
 			h2:nth-of-type(1n+2) { text-align: center; }
 
@@ -382,7 +428,13 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				font-size     : 0.8em;
 				text-transform: capitalize;
 
-				&[data-i18n-title='ratingmodifier'] { grid-area: 1 / 3 / 1 / 7; }
+				&[data-i18n-title='ratingmodifier'] { 
+					grid-area: 1 / 3 / 1 / 7; 
+					width: 100%;
+
+					input[type='number'] { width: 3em; }
+				}
+
 				&[data-i18n-title='specialization'] { grid-area: 3 / 1 / 3 / 7; }
 				&[data-i18n-title='notes'], textarea { grid-area: 4 / 1 / 4 / 7; }
 
@@ -396,7 +448,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 			input[name='attr_skill'] { @extend %borderBottom; }
 
-			input[name="attr_rating_modifier"] { width: 3.5em; }
+			input[name='attr_rating_modifier'] { width: 3.5em; }
 
 			input[name='attr_display_specialization'][value=''] ~ div.sheet-buttons button[name*='specialization'] { @extend %display-none; }
 
@@ -417,8 +469,8 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 				@include repeatingInformation(7, false);
 
-				input[name="attr_damage"],
-				input[name="attr_dicepool_modifier"] {
+				input[name='attr_damage'],
+				input[name='attr_dicepool_modifier'] {
 					width: 3.5em;
 				}
 
@@ -428,6 +480,86 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 		}
+
+		/*** ARMS ****/
+		div.sheet-arms {
+			div.sheet-headers {
+				display: grid;
+				@extend %gridGap;
+
+				h2:nth-of-type(1n+2) { text-align: center; }
+			}
+
+			div.repitem {
+				h3 { color: $blacker; }
+
+				input { 
+					&:nth-of-type(1n+2) { text-align: center; }
+
+					&.sheet-flag-primary[value='primary'] + button {
+						background-color: $gold;
+						border-bottom: 2px solid $blacker;
+					}
+				}
+			}
+
+			div.sheet-weapons {
+				$weaponsGrid: 25% 1.25fr 3em 2.5em 3em 1fr 1fr 1em 1em;
+				div.sheet-headers { grid-template-columns:$weaponsGrid; }
+
+				div.repitem {
+					grid-template-columns: $weaponsGrid;
+					@include repeatingInformation(10, false);
+
+					div.sheet-settings { 
+						grid-column: 1 / 10;
+						grid-template-columns: $weaponsGrid;
+					}
+				}
+
+				div.sheet-weapon-range,
+				div.sheet-weapon-melee {
+					width: 100%;
+					div.sheet-row { 
+						grid-column: 1 / 9;
+
+						label[data-i18n-title="modeoptions"],
+						label[data-i18n-title="range"]{ 
+							width: 25%; 
+						}
+
+						input[type='number'] {width: 3em;}
+
+						select {width: 30%;}
+					};
+
+					div.sheet-exotic-warning { display: none; }
+
+					input[value='0'] + div.sheet-exotic-warning  { display: block; }
+				}
+			}
+
+			div.sheet-armor {
+				$armorGrid: 30% 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em 1em 1em;
+				div.sheet-headers { grid-template-columns:$armorGrid; }
+
+				div.repitem {
+					grid-template-columns: $armorGrid;
+					@include repeatingInformation(11, false);
+
+					div.sheet-settings { 
+						grid-column: 1 / 11;
+						grid-template-columns: $armorGrid;
+
+						div.sheet-row {
+							grid-column: 1 / 11;
+						}
+					}
+				}
+
+			}
+		}
+
 
 		/*** AUGS ****/
 		div.sheet-augs {
@@ -475,12 +607,13 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 		/***** MAGIC *****/
 		div.sheet-magic {
-			$magicGrid: 1fr 4em 4em 6em 3em 1em 1em;
+			$magicGrid: 30% 1.5fr 1.5fr 2fr 2em 1em 1em;
 
 			input.sheet-magic-toggle[value='rituals'] ~ .sheet-headers h2:nth-of-type(1n+2) {
 				@extend %display-none;
 			}
 
+			h2:nth-of-type(1n+2) { text-align: center; }
 			h3 { color: $blacker; }
 
 			div.sheet-headers {
@@ -494,20 +627,19 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 			/***** SPELLS & PREPARTATIONS *****/
 			div.sheet-spellsForumlas {
-
 				div.repitem {
 					grid-template-columns: $magicGrid;
 
 					@include repeatingInformation(8, false);
 
-					input[name="attr_damage"],
-					input[name="attr_dicepool_modifier"] {
+					input[name='attr_damage'],
+					input[name='attr_dicepool_modifier'] {
 						width: 3.5em;
 					}
 
-					select[name="attr_category"] { grid-row: 2; }
+					select[name='attr_category'] { grid-row: 2; }
 
-					div.sheet-row { grid-column: 1 / 8; }
+					div.sheet-row { grid-column: 1 / 6; }
 
 					div.sheet-settings { 
 						grid-column: 1 / 8;
@@ -525,7 +657,9 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				div.repitem {
 					grid-template-columns: $ritualsGrid;
 
-					label[data-i18n-title="name"] { grid-column: 1 / 4; }
+					label {
+						&[data-i18n-title='name'] { grid-column: 1 / 4; }
+					}
 
 					div.sheet-row { grid-column: 1 / 4; }
 				}
@@ -536,11 +670,15 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 
+			div.sheet-magic-preps, div.sheet-magic-spells {
+				textarea { width: 93%; }
+			}
+
 			/***** PREPARATIONS *****/
 			div.sheet-magic-preps {
 				/* READIED PREPARATIONS */
 				div.sheet-prepared-preparations {
-					$preparationsGrid: 1fr 5em 5em 6em 1em 1em;
+					$preparationsGrid: 40% 1fr 1fr 2fr 1em 1em;
 
 					div.sheet-headers {
 						grid-template-columns:$preparationsGrid ;
@@ -556,6 +694,8 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 							grid-template-columns: $preparationsGrid;
 
 							select { grid-column: 4 / 7; }
+
+							textarea { width: 100%; }
 						}
 					}
 				}
@@ -611,7 +751,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			}
 
 			div.sheet-complex-forms {
-				$complexFormsGrid: 1fr 5.5em 5.5em 4em 1em 1em;
+				$complexFormsGrid: 30% 1fr 1fr 4em 1em 1em;
 
 				div.sheet-headers {
 					display: grid;
