--- a/Shadowrun5thEdition/src/pug/_variables.pug
+++ b/Shadowrun5thEdition/src/pug/_variables.pug
@@ -15,6 +15,9 @@
 //- AUGEMENATATIONS ARRAY
 - const augementations = ['Augmentations', 'Rating', 'Essence'];
 
+//- WEAPON ARRAY
+- const weaponModes = ['BF', 'FA', 'SA', 'SS', 'Other'];
+
 //- LOOP OBJECTS
 - const limitObject = {'Mental':'mental_limit', 'Physical':'physical_limit', 'Social':'social_limit', 'Attack':'attack', 'Data Processing':'data_processing', 'Firewall':'firewall', 'Sleaze':'sleaze'};
 - const hostObject = {'Host Rating': ['host_rating', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
@@ -24,22 +27,32 @@
 - const npcComplexFormsObject = {'Dice': {'type': 'number', 'placeholder': '18'}, 'Name': {'type': 'text', 'placeholder': 'Editor'}, 'Target': {'type': 'select', 'default': 'device', 'array': formTargets}, 'Duration': {'type': 'text', 'placeholder': 'Permanent'}, 'Fade': {'type': 'number', 'placeholder': '+2'}, 'Notes': {'type': 'text', 'placeholder': 'edit files'}};
 - const icObject = {'Name': {'type': 'text', 'placeholder': 'Black'}, 'IC Limit': {'type': 'select', 'default': 'attack', 'array':['Attack', 'Data Processing']}, 'Defense Attribute': {'type': 'select', 'default': 'willpower', 'array':['Willpower', 'Intuition', 'Logic']}, 'Defense Matrix Attribute': {'type': 'select', 'default': 'firewall', 'array':['Attack', 'Sleaze', 'Data Processing', 'Firewall']}, 'Notes': {'type': 'text', 'placeholder': 'deploy the ic'}};
 
-	//- PC MAGIC
+//- PC MAGIC
 - const pcCoreSpellObject = {'Name': {'type': 'text', 'placeholder': 'Fireball'}, 'Type': {'type': 'select', 'default': 'physical', 'array': spellTypes}, 'Range': {'type': 'select', 'default': 'los', 'array':spellRanges}, 'Duration': {'type': 'select', 'default': 'instant', 'array':spellDurations}, 'Drain': {'type': 'number', 'placeholder': '-1'}};
 - const pcCatagorySpellObject = {'Category': {'type': 'select', 'default': 'combat', 'array': spellCatagories}, 'Combat': {'type': 'select', 'default': 'force', 'array':spellCombatTypes}, 'Damage': {'type': 'text', 'placeholder': 'P'}};
 - const pcAlchemySpellObject = {'Skill': {'type': 'select', 'default': '@{alchemy}', 'array':['Enchanting Group', 'Alchemy']}, 'Specialization': {'type': 'checkbox'}, 'modifier dice': {'type': 'number', 'placeholder': '0'}};
 - const pcSorcerySpellObject = {'Skill': {'type': 'select', 'default': '@{spellcasting}', 'array':['Sorcery Group', 'Spellcasting']}, 'Specialization': {'type': 'checkbox'}, 'modifier dice': {'type': 'number', 'placeholder': '0'}};
 
-	//- PC MATRIX
+//- PC MATRIX
 - const pcComplexFormButton = {'name': 'complex_form', 'header': '@{name}', 'rollFormula': '@{skill}+@{dicepool}+@{resonance}', 'desc': '{{desc=Level ?{Level|}, Fade [[?{Level|}+(@{fade})]]}}', 'display': 'name'};
 
-//- BUTTON OBJECTS
+//- PC WEAPONS
+- const pcRangeWeaponObject = {'Weapon': {'type': 'text', 'placeholder': 'Ares Predator'}, 'Dam': {'type': 'text', 'placeholder': '9P'}, 'ACC': {'type': 'text', 'placeholder': '5'}, 'AP': {'type': 'number', 'placeholder': '-2'}, 'Mode': {'type': 'select', 'default': 'SS', 'array':weaponModes}, 'Recoil': {'type': 'number', 'placeholder': '+2'},'Ammo': {'type': 'number', 'placeholder': '15'}};
+- const pcMeleeWeaponObject = {'Weapon': {'type': 'text', 'placeholder': 'Katana'}, 'Dam': {'type': 'text', 'placeholder': '5P'}, 'ACC': {'type': 'text', 'placeholder': '7'}, 'AP': {'type': 'number', 'placeholder': '-3'}, 'Reach': {'type': 'number', 'placeholder': '1'}};
+
+//- PC ARMOR
+- const pcArmorObject = {'Name': {'type': 'text', 'placeholder': 'Armor Jacket'}, 'Rating': {'type': 'number', 'placeholder': '12'}, 'Acid': {'type': 'number', 'placeholder': '+5'}, 'Cold': {'type': 'number', 'placeholder': '0'}, 'Electrical': {'type': 'number', 'placeholder': '0'}, 'Fire': {'type': 'number', 'placeholder': '0'} , 'Radiation': {'type': 'number', 'placeholder': '0'}};
+
+//- Weapons
 - const weaponButton = {'name': 'weapon', 'header': '@{weapon_type}', 'rollFormula': '@{weapon_dice}', 'desc': '{{desc=ACC @{weapon_acc}, DV @{weapon_dv}, AP @{weapon_ap}}}{{rea=[[@{weapon_reach}]]}}', 'display': 'weapon_name'};
+- const pcRangeWeaponButton = {'name': 'range_weapon', 'header': '@{weapon}', 'rollFormula': '@{skill}+@{dicepool}+@{agility}', 'desc': '{{desc=@{mode}, ACC @{acc}, DV @{damage}, AP @{ap}}}', 'display': 'weapon'};
+- const pcMeleeWeaponButton = {'name': 'melee_weapon', 'header': '@{weapon}', 'rollFormula': '@{skill}+@{dicepool}+@{agility}', 'desc': '{{desc=ACC @{acc}, DV @{damage}, AP @{ap}, Reach @{reach}}}', 'display': 'weapon'};
 
 	//- MAGIC
-- const npcSpellButton = {'name': 'spell', 'header': '@{name}', 'rollFormula': '@{dice}', 'desc': '{{desc=@{combat_type}?{Force|}, Drain [[?{Force|}+(@{drain})]]}}', 'display': 'name'};
-- const pcSpellButton = {'name': 'spell', 'header': '@{name}', 'rollFormula': '@{skill}+@{dicepool}+@{magic}', 'desc': '{{desc=@{combat_type}?{Force|}, Drain [[?{Force|}+(@{drain})]]}}', 'display': 'name'};
-- const prepButton = {'name': 'preparation', 'header': '@{name}', 'rollFormula': '@{force}+@{potency}', 'desc': '{{desc=@{note}}}', 'display': 'name'};
+- const npcSpellButton = {'name': 'spell', 'header': '@{name}', 'rollFormula': '@{dice}', 'desc': '{{desc=@{category}?{Force|}, Drain [[?{Force|}+(@{drain})]]}}', 'display': 'name'};
+- const pcSpellButton = {'name': 'spell', 'header': '@{name}', 'rollFormula': '@{skill}+@{dicepool}+@{magic}', 'desc': '{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}', 'display': 'name'};
+- const prepButton = {'name': 'preparation', 'header': '@{name}', 'rollFormula': '@{force}+@{potency}', 'display': 'name'};
+- const pcRitualButton = {'name': 'ritual', 'header': '@{name}', 'rollFormula': '@{skill}+@{dicepool}+@{magic}', 'desc': '{{desc=Force ?{Force|}}}', 'display': 'name'};
 
 	//- MATRIX
 - const formButton = {'name': 'complex form', 'header': 'f@{orm_name}', 'rollFormula': '@{form_dice}', 'desc': '{{desc=?{Level|}, Fade [[?{Level|}+(@{form_fade})]]}}', 'display': 'form_name'};
