fix a button issue

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1094,9 +1094,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-cc-row button[type='roll'] > span,
   .sheet-cc-row h3 + span {
     display: inline-block;
-    margin-left: 1%;
-    text-align: center;
-    width: 8%; }
+    margin-left: 1%; }
   .sheet-cc-row span[name*='ammo'] {
     width: 4%; }
   .sheet-cc-row span[name*='ammo_max']:before {
