--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -257,7 +257,7 @@
 				+spriteButton('skill', 'display')
 				.settings
 					h2.full-row(data-i18n='skill') Skill
-					select.skill-select(name='attr_skill' title=`@{repeating_${key}`+'_${x}_skill}')
+					select.skill-select(name='attr_skill' title=`@{repeating_active`+'_${x}_skill}')
 						include ../html/skillsselectsprite.html
 
 		//- SPRITE POWERS
