--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -340,6 +340,24 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			button[type='roll'] { color:$blacker }
 		}
 
+		/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
+		div.sheet-border-box {
+			background-image: -moz-linear-gradient($red, transparent), -moz-linear-gradient($red, transparent);
+			background-image: -o-linear-gradient($red, transparent), -o-linear-gradient($red, transparent);
+			background-image: -webkit-gradient(linear, 0 0, 0 100%, from($red), to(transparent));
+			background-image: -webkit-linear-gradient($red, transparent);
+			background-image: linear-gradient($red, transparent), linear-gradient($red, transparent);
+			border-top      : 2px solid $red;
+			clear           : both;
+			border-top-right-radius: 10px;
+			border-top-left-radius : 0px;
+
+			div.sheet-pc-box {
+				border-top-right-radius: 10px;
+				border-top-left-radius : 0px;
+			} 	
+		} 
+
 		/***** REPEATING CONTAINERS *****/
 		div.sheet-repeating-container {
 			div.repitem {
