--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -19,24 +19,6 @@
 		select.sheet-skill-select {width: 29%;}
 	}
 
-/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
-	.sheet-border-box {
-		background-image: -moz-linear-gradient($red, transparent), -moz-linear-gradient($red, transparent);
-		background-image: -o-linear-gradient($red, transparent), -o-linear-gradient($red, transparent);
-		background-image: -webkit-gradient(linear, 0 0, 0 100%, from($red), to(transparent));
-		background-image: -webkit-linear-gradient($red, transparent);
-		background-image: linear-gradient($red, transparent), linear-gradient($red, transparent);
-		border-top      : 2px solid $red;
-		clear           : both;
-		border-top-right-radius: 10px;
-		border-top-left-radius : 0px;
-
-		.sheet-pc-box {
-			border-top-right-radius: 10px;
-			border-top-left-radius : 0px;
-		} 	
-	} 
-
 	.sheet-static { 
 		margin-right: 0.5%;
 
@@ -48,25 +30,27 @@
 	}
 
 /***** HEADERS AND TRIANGLES *****/
-	.sheet-header {
+	div.sheet-header {
 		display: inline-flex;
 		float: right;
-		height: 20px;}
+		height: 20px;
+	}
 
-	.sheet-triangle,
-	.sheet-right-tri {
-		border-top: 20px solid transparent;}
+	div.sheet-triangle,
+	div.sheet-right-tri {
+		border-top: 20px solid transparent;
+	}
 
-	.sheet-triangle {border-right: 30px solid $red;}
-	.sheet-right-tri {border-left: 30px solid $red;}
+	div.sheet-triangle {border-right: 30px solid $red;}
+	div.sheet-right-tri {border-left: 30px solid $red;}
 
-	.sheet-right-header {
+	div.sheet-right-header {
 		margin-right: -8%;
 		float: left;
 	}
 
 /***** SECONDARY HEADERS LIKE ON SKILLS *****/
-	.sheet-htab {
+	div.sheet-htab {
 		margin-right: -47px;
 
 		input {
