--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -28,7 +28,8 @@
 		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { @extend %display-inline-block; }
 	}
 
-	/***** SETTINGS *****/
+	/***** SETTINGS *****/				
+	div.sheet-collapse,
 	.sheet-settings { @extend %display-none; }
 
 	input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
@@ -59,23 +60,14 @@
 		width     : 100%;
 	}
 
+	/* NEW REPEATING CONTAINER WAY TO SHOW & HIDE SETTINGS */
+	/* SLOWLY ELIMINATE ALL TRACES OF SETTINGS-TOGGLE WITH THIS WAY OF DOING THINGS */
+	input.sheet-settings-flag:checked ~ div.sheet-settings { display   : inherit; }
+	input.sheet-collapse-flag:checked ~ div.sheet-collapse { display: block; }
+
 	/* OLD WAY TO SHOW & HIDE THINGS */
-	input.sheet-settings-toggle[value='display'] ~ div.sheet-display,
-    input.sheet-settings-toggle[value='settings'] ~ div.sheet-settings {
-      display: inline-block;
-    }
-
-    /* NEW WAY TO HIDE THINGS */
-    input.sheet-settings-toggle[value='display'] ~ .sheet-settings {
-    	@extend %display-none; 
-    }
-
-    input.sheet-settings-toggle[value='settings'] ~ .sheet-settings {
-    	@extend %display-inline-block; 
-    }
-
-    /* SHOW COLLAPSABLE DESCRIPTIONS AFTER CLICKING HIDDEN CHECKBOX */
-    input.sheet-display-flag ~ div.sheet-collapsable { height: auto; }
+    input.sheet-settings-toggle[value='display'] ~ .sheet-settings { @extend %display-none;  }
+    input.sheet-settings-toggle[value='settings'] ~ .sheet-settings { @extend %display-inline-block;  }
 
 	@each $specialAttribute in $specialCharacters {
 		//-PCs
@@ -89,6 +81,18 @@
 			@extend %display-inline-block; 
 		}
 	}
+
+	/***** PC WEAPONS *****/
+	div.sheet-weapon-range,
+	div.sheet-weapon-melee {
+		@extend %display-none;
+	}
+
+	input.sheet-tab-switch[value='range'] ~ .sheet-weapon-range,
+	input.sheet-tab-switch[value='melee'] ~ .sheet-weapon-melee  {
+		@extend %display-inline-block; 
+	}
+
 
 	/***** NPC TYPES *****/
 	@each $npcType in $npcTypes {
