[Stars Without Number Revised] v2.5.5 (#5643)
* Added permanent strain tracking from cyberware.

* Fix typo

* HP roll now behaves correctly with Heroic characters.

* Travel cost macro.

* Add new magic skills, also add option in weapon skill list.

* Fix typo

* Readme

* Number of attacks for NPCs upped to 8

* Add magic effort

* Final tweaks to magic effort

* Space Magic finished

* Changelog

* Add i18n to missing Innate AC

* changelog

* Fix version number

* Build html

* Fix for upgrade code stopping early

* Fix HP roll looking for con_bonus in stead of constitution_mod

* Remove incorrect field title

* Versioning

* Changelog

* Revert "SWN Revised v2.4.0 (#5124)"

This reverts commit caf89367c597c2f49c76fffc58422de4de8ba4bc.

* Fix cyberware strain sum being horribly broken

* Incorrect title text for permanent strain extra field

* Fix stray space nullifying a on(change) call

* Changelog

* V2.4.4

* Fix inconsistent field name HP_MAX on the NPC sheet - the correct way to write this is HP_max.
* Link the name input on the PC sheet to the character_name attribute.
* Fix misspelling of "Initiative" in translations, which was not propagated from  translation.json

Fixes #62, #65, and #70.

* Fixes #69

* Remove accidental incorrect maths added in last commit.

* Fix @{name} instead of @{character_name}

* Fix initiative another way

* README typo

* Fix version number

--- a/Stars_Without_Number_Revised/Source/pug/ship.pug
+++ b/Stars_Without_Number_Revised/Source/pug/ship.pug
@@ -34,7 +34,7 @@ input(type="hidden", name="attr_ship_vehicle_type", value="SHIP").input-type
 	+text-input("ship_ac", "AC")(type="number", min="0")
 	+text-input("ship_armor", "ARMOR")(type="number", min="0")
 	+text-input("ship_crew_min", "CREW_MIN")(type="number", min="0").vehicle-type.vehicle-type-ship.vehicle-type-custom
-	+text-input("ship_crew", "CURRENT")(type="number", min="0").vehicle-type.vehicle-type-ship.vehicle-type-custom
+	+text-input("ship_crew", "CURRENT")(type="number", min="0", value="0").vehicle-type.vehicle-type-ship.vehicle-type-custom
 	+text-input("ship_crew_max", "MAX")(type="number", min="0").vehicle-type.vehicle-type-ship.vehicle-type-custom
 .stats.core-box-text
 	+text-input-duo("ship_hp", "ship_hp_max", "HIT_POINTS", {min: "0"})(min="0").important
