Removed hard-coded talents and quirks. Any data that was in these fields in v1.5 will be automatically migrated as a new row in their respective repeating sections.

--- a/TailsOfEquestria/pug/tabPC.pug
+++ b/TailsOfEquestria/pug/tabPC.pug
@@ -87,7 +87,7 @@ include fields.pug
             .talentIcon(style='font-size: 3em;')
           div(style="display: inline-block; width: 6.5in;")
             +labelledUnderlined('')(style='width: 2.5in;'): +input('text', prefix + 'name')(placeholder=placeholder)
-            +labelledUnderlined('Source:'): +selectTalentSource(prefix + 'talentSource')
+            +labelledUnderlined('Source:'): +selectTalentSource(prefix + 'source')
             +labelledUnderlined('Dice:'): +selectDice(prefix + 'dice')
             +labelledUnderlined('Trait'): +selectTrait(prefix + 'trait')
             +updowngrade(prefix)
@@ -96,8 +96,6 @@ include fields.pug
           +input('hidden', prefix + 'equation')
 
       h1 Talents:
-      +talent('talent_cutieMark_', 'Cutie mark talent')
-      +talent('talent_racial_', 'Racial talent')
       +repeating('talents')
         +talent('', '')      
   div
@@ -107,11 +105,10 @@ include fields.pug
         .quirk(class=isMain ? 'quirkMain' : '')
           .quirkIcon(style='font-size: 2em;')
           +labelledUnderlined(''): +input('text', prefix + 'name')
-          +labelledUnderlined('Source:'): +selectQuirkSource(prefix + 'quirkSource')
+          +labelledUnderlined('Source:'): +selectQuirkSource(prefix + 'source')
           +labelledUnderlined('Notes'): +input('text', prefix + 'notes')
       
       h1 Quirks:
-      +quirk(true)
       +repeating('quirks')
         +quirk(false)
 
